medioambiente: css: Fix CSS issue on mobile.

--- a/medioambiente/assets/css/main.css
+++ b/medioambiente/assets/css/main.css
@@ -1488,7 +1488,7 @@
 			}
 
 				#intro, #movilidad, #politicaspublicas, #acuerdosciudadanos, #normatividadempresas, #iniciativaciudadana p br {
-					display: none;
+					/* display: none; */
 				}
 
 		}
